style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
html ,body {
	height: 100%;
	line-height: 1;
	text-align: center;

}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

.container {
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	background: #eee;
  }


.play-area {
	display: grid;
	width: 310px;
	height: 310px;
	grid-template-columns: auto auto auto;
}

.block {
	display: flex;
	min-width: 100px;
	min-height: 100px;
	align-items: center;
	justify-content: center;
	font-size: 3em;
	font-weight: bold;
	border: 3px solid black;
	transition: background 0.2s ease-in-out;
}
  
h1{
	font-size: 3em;
	margin-bottom: 0.5em;
}

h2{
	font-size: 1.5em;
	margin-bottom: 0.5em;
}

#new-button {
	outline: none;
	border: 4px solid green;
	padding: 10px 20px;
	margin-bottom: 1.5em;
	font-size: 1em;
	font-weight: bold;
	background: none;
	transition: all 0.2s ease-in-out;
}

#new-button:hover {
	cursor: pointer;
	background: green;
	color: white;
}


.formContainer{
	background-color:#242582;
}

#popupForm{
	display: none;
}

#formContainer2{
	display: grid;
	row-gap: 0.5em;
}

.player1Form{
	display: grid;
	place-self: center;
	color: white;
}

.player1Form > * {
	margin: 0.5em;
}

#player1{
	text-align: center;
}

#player2{
	text-align: center;
}

#compSelection{
	display: flex;
	justify-content: space-evenly;
}

#playerSelection{
	display: flex;
	align-items: center;
	justify-content: space-evenly;
	height: 20px;
}

.radio > input[type=radio] {
    vertical-align: middle;
    margin-top: -2px;
}

.radio {
	flex: 1;
}

.switch{
	position: relative;
	display: inline-block;
	width: 8em;
	height: 3.5em;
	margin: 0.5em auto;
}

.slider{
	position: absolute;
	cursor: pointer;
	inset: 0;
	background-color: #5CDb95;
	transition: .4s;
	border-radius: 34px;
}

.switch input{
	opacity: 0;
	width: 0;
	height: 0;
}

.slider:before{
	position: absolute;
	content: "";
	height: 3.25em;
	width: 3.25em;
	left: 0.1em;	
	top: 0.1em;
	background-color: white;
	transition: 0.4s;
	border-radius: 5em;
}

input:checked + .slider{

	background: #F64C72;
}

input:checked + .slider:before{
	transform: translateX(4.5em);
}

.winner{
	display:grid;
	height: 100%;
	width: 100%;
	align-items: center;
	justify-content: start;
	font-size: 1.3em;
	text-align: left;

}

.winner1{
	
	background: black;
}


.block:hover {
	cursor: pointer;
	background: #0ff30f;
}  

#block_0,
#block_1,
#block_2 {
	border-top: none;
}

#block_0,
#block_3,
#block_6 {
	border-left: none;
}

#block_6,
#block_7,
#block_8 {
	border-bottom: none;
}

#block_2,
#block_5,
#block_8 {
	border-right: none;
}


#reset {
	outline: none;
	border: 4px solid green;
	margin-top: 1.5em;
	padding: 10px 20px;
	font-size: 1em;
	font-weight: bold;
	background: none;
	transition: all 0.2s ease-in-out;
}

#reset:hover {
	cursor: pointer;
	background: green;
	color: white;
}



	

